utp/compII/toscal/tests/semantic/fail/undeclared-variable-procedure.pas
program complain_on_undeclared_variable_simple;
var a, b, c : integer;

begin
	b := a + c;

	do_something(1, 2);
end.
